[gd_scene load_steps=6 format=2]

[ext_resource path="res://vehicles/vehicle.gd" type="Script" id=1]
[ext_resource path="res://vehicles/meshes/vehicles_car.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://sounds/car_hit.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.7, 1 )

[node name="Vehicle" type="KinematicBody" groups=["vehicles"]]
collision_layer = 640
collision_mask = 240
script = ExtResource( 1 )

[node name="Origin" type="Spatial" parent="."]

[node name="Mesh" type="MeshInstance" parent="Origin"]
mesh = ExtResource( 2 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area" parent="."]
collision_layer = 0
collision_mask = 190

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 3 )

[node name="FleeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="EvacuateTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.8

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="CrashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = -5.0
unit_size = 10.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0

[connection signal="area_entered" from="Hitbox" to="." method="hit"]
[connection signal="body_entered" from="Hitbox" to="." method="collision"]
[connection signal="timeout" from="FleeTimer" to="." method="flee"]
[connection signal="timeout" from="EvacuateTimer" to="." method="evacuate" binds= [ 50 ]]
[connection signal="timeout" from="KillTimer" to="." method="destroy"]
[connection signal="timeout" from="AttackTimer" to="." method="attack"]
[connection signal="timeout" from="DropTimer" to="." method="evacuate" binds= [ 100, true ]]
